<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HeadActivity">

    <TextView
        android:id="@+id/chooseText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseRange"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="#fff1f1ff"
        android:layout_marginTop="50sp"/>

    <RadioGroup
        android:id="@+id/valueRadioGroup"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_marginTop="30sp"
        android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/value1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/value1"
        android:textSize="20sp"
        android:checked="true"/>

    <RadioButton
        android:id="@+id/value2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/value2"/>

    <RadioButton
        android:id="@+id/value3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/value3"/>
    </RadioGroup>

    <Button
        android:id="@+id/startButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:background="@drawable/value_range"
        android:text="@string/start"
        android:textSize="16pt"
        android:textColor="#000000"/>


</LinearLayout>