<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/app_background"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GameActivity">


    <TextView
    android:id="@+id/textView1"
    android:layout_width="fill_parent"
    android:layout_height="70dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="14dp"
    android:layout_alignParentTop="true"
    android:textSize="19sp"
    android:textColor="#ffff001e"
    android:gravity="center"
    android:drawableLeft="@drawable/down2"
    android:drawableRight="@drawable/up2"/>

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="26dp"
        android:thumb="@drawable/thumbler_small"/>

    <Button
        android:id="@+id/tryBut"
        android:text="@string/let_try"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/seekBar1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/trybutton"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/newGame"
        android:text="@string/newGame"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/seekBar1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/value_range"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/leftTry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tryBut"
        android:text="@string/leftTry"
        android:textSize="20sp"
        android:textColor="#ffff0e16"
        android:layout_marginTop="20dp"
        android:fontFamily="arial"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scala"
        android:textSize="15pt"
        android:textColor="#ff000000"
        android:gravity="center"/>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:layout_toRightOf="@+id/scala"
        android:layout_toEndOf="@+id/scala"
        >

        <Button
            android:id="@+id/newGameBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newGame"
            android:layout_marginLeft="30sp"
            android:background="@drawable/value_range"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

        <ImageView
            android:id="@+id/bestScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/high"
            android:layout_marginLeft="30sp"/>


        <ImageView
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/vol2"
            android:layout_marginLeft="30sp"/>

        </LinearLayout>

</RelativeLayout>
